Bug 1585216 - Propagate the inner text field's baseline as the baseline for a number input.  r=dholbert

Differential Revision: https://phabricator.services.mozilla.com/D48588

--HG--
extra : moz-landing-system : lando